--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,36 @@
 {
   "manifest_version": 2,
-
-  "name": "Github Comment Tracker",
-  "description": "Tracks resolved / unresolved state of comments on github pull requests",
-  "version": "1.1.6",
-
+  "name": "GitHub PR Comment Tracker",
+  "version": "1.0.10",
+  "description": "Tracks resolved/unresolved comments on GitHub PR using the Thumbs Up (+1): https://github.com/alexbt/github-pr-comment-tracker",
+  "short_name": "GitHub PR Comment Tracker",
+  "icons": {
+    "128": "plainicon.com-6099-128px.png"
+  },
   "permissions": [
     "https://github.com/",
     "storage"
   ],
-
-  "content_scripts": [{
-    "matches": ["*://github.com/*/pull*"],
-    "js": ["jquery-2.1.0.min.js", "underscore-min.js", "parse-1.6.14.min.js", "waitForKeyElements.js", "tracker.js"],
-    "css": ["main.css"]
-  }],
-
-  "options_page": "options.html"
+  "content_scripts": [
+    {
+      "matches": [
+        "*://github.com/*/pull*"
+      ],
+      "js": [
+        "jquery-2.1.0.min.js",
+        "underscore-min.js",
+        "parse-1.6.14.min.js",
+        "waitForKeyElements.js",
+        "tracker.js"
+      ],
+      "css": [
+        "main.css"
+      ]
+    }
+  ],
+  "options_page": "options.html",
+  "options_ui": {
+    "chrome_style": true,
+    "page": "options.html"
+  }
 }
